<resources>
    <string name="app_name">chat_android</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_guidance">既存のアカウントでログインする</string>
    <string name="signup">新規登録</string>
    <string name="password">パスワード</string>
    <string name="user_name">ニックネーム</string>
    <string name="user_id_name">ユーザーID</string>
    <string name="login">ログイン</string>
    <string name="signup_guidance">新しくユーザーを登録する</string>
    <string name="notification_id">towelman_chat_notification</string>
    <string name="notification_name">チャット♪</string>
    <string name="make_group">グループ作成</string>
    <string name="group_name">グループ名</string>
    <string name="add_dialogue">友達登録</string>
    <string name="brock">ブロックする</string>
    <string name="show_group_details_guidance">グループの詳細へ</string>
    <string name="accept">受け入れる</string>
    <string name="send">送信</string>
    <string name="older_load">もっと古いトーク</string>
    <string name="newer_load">もっと新しいトーク</string>
    <string name="change">変更</string>
    <string name="delete">削除</string>
    <string name="close">閉じる</string>
    <string name="logout_guidance">この機種をログアウトさせる</string>
    <string name="withdrawal_guidance">退会する</string>
    <string name="user_config">ユーザー設定</string>
    <string name="delete_group_guidance">このグループを削除する</string>
    <string name="exit_group_guidance">このグループから脱退する</string>
    <string name="invitation">勧誘</string>
    <string name="invitation_user_to_group">ユーザーの勧誘</string>
    <string name="user_in_group">グループ加入者一覧</string>
    <string name="group_details">グループ詳細</string>
    <string name="withdrawal_title">警告!!</string>
    <string name="withdrawal_content">本当に退会してしまいますか？\nこの操作は取り消せません！！</string>
    <string name="withdrawal">退会する</string>
    <string name="back">戻る</string>
</resources>