<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GroupDetailsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/fragmentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/group_details"
            android:textAlignment="center"
            android:layout_alignParentTop="true"
            android:textSize="50sp" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/fragmentTitle"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_height="50dp">

                    <TextView
                        android:layout_weight="0.8"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/group_name"
                        android:textSize="30sp"/>

                    <Button
                        android:id="@+id/groupNameChangeButton"
                        android:layout_width="0dp"
                        android:layout_weight="0.2"
                        android:layout_height="match_parent"
                        android:text="@string/change"
                        android:textSize="20sp" />

                </LinearLayout>

                <EditText
                    android:id="@+id/groupNameTextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:autofillHints="ユーザーID"
                    android:inputType="text"
                    tools:ignore="LabelFor"/>

                <TextView
                    android:id="@+id/deleteGroupTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_group_guidance"
                    android:textAlignment="center"
                    android:textColor="#1097EA"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/exitGroupTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exit_group_guidance"
                    android:textAlignment="center"
                    android:textColor="#1097EA"
                    android:textSize="20sp"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_marginTop="15dp"
                    android:layout_height="50dp">

                    <TextView
                        android:layout_weight="0.8"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/invitation_user_to_group"
                        android:textSize="30sp"/>

                    <Button
                        android:id="@+id/invitationToGroupButton"
                        android:layout_width="0dp"
                        android:layout_weight="0.2"
                        android:layout_height="match_parent"
                        android:text="@string/invitation"
                        android:textSize="20sp" />

                </LinearLayout>

                <EditText
                    android:id="@+id/userIdNameForInvitationTextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:autofillHints="勧誘したいユーザーのID"
                    android:inputType="text"
                    tools:ignore="LabelFor"/>

                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_in_group"
                    android:textSize="30sp"/>

                <LinearLayout
                    android:id="@+id/userInGroupContainer"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="UselessLeaf" />

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</FrameLayout>