<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WithdrawalFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black"
        android:backgroundTint="@color/black"
        android:gravity="center"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/withdrawal_title"
            android:textAlignment="center"
            android:textColor="#ff0000"
            android:textSize="50sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/withdrawal_content"
            android:textAlignment="center"
            android:textColor="#ff0000"
            android:textSize="50sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/withdrawalButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/withdrawal"
                app:backgroundTint="#ff0000"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/back"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>