<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".LoginFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="50sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_id_name"
        android:textSize="30sp"
        android:translationY="120dp" />

    <EditText
        android:id="@+id/userIdNameTextEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:translationY="160dp"
        android:autofillHints="ユーザーID"
        android:inputType="text"
        tools:ignore="LabelFor"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="30sp"
        android:translationY="220dp" />

    <EditText
        android:id="@+id/passwordTextEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:translationY="260dp"
        android:autofillHints="パスワード"
        android:inputType="textPassword"
        tools:ignore="LabelFor"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="189dp"
        android:layout_height="77dp"
        android:text="@string/login"
        android:textSize="20sp"
        android:translationX="100dp"
        android:translationY="350dp" />

    <TextView
        android:id="@+id/signupTextView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/signup_guidance"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        android:translationY="430dp"/>


</FrameLayout>