<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textSize="50sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_id_name"
        android:textSize="30sp"
        android:translationY="100dp" />

    <EditText
        android:id="@+id/userIdNameTextEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:translationY="140dp"
        android:autofillHints="ユーザーID"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textSize="30sp"
        android:translationY="200dp" />

    <EditText
        android:id="@+id/userNameTextEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:translationY="250dp"
        android:autofillHints="ニックネーム"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="30sp"
        android:translationY="310dp" />

    <EditText
        android:id="@+id/passwordTextEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:translationY="360dp"
        android:autofillHints="パスワード"
        android:inputType="textPassword"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/oneMorePasswordTextEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:translationY="410dp"
        android:autofillHints="パスワード（もう一度）"
        android:inputType="numberPassword"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="189dp"
        android:layout_height="77dp"
        android:text="@string/signup"
        android:textSize="20sp"
        android:translationX="112dp"
        android:translationY="480dp" />

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/login_guidance"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        android:translationY="560dp"/>

</FrameLayout>