<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="top">

        <EditText
            android:id="@+id/contentEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:inputType="textMultiLine"
            tools:ignore="Autofill,LabelFor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="top|end">

            <Button
                android:id="@+id/closeButton"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/close"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/changeButton"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/change"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/delete"
                android:textSize="20sp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</merge>