<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserConfigFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/fragmentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_config"
            android:textAlignment="center"
            android:layout_alignParentTop="true"
            android:textSize="50sp" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/fragmentTitle"
            android:orientation="vertical">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_height="50dp">

                        <TextView
                            android:layout_weight="0.8"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:text="@string/user_id_name"
                            android:textSize="30sp"/>

                        <Button
                            android:id="@+id/userIdNameChangeButton"
                            android:layout_width="0dp"
                            android:layout_weight="0.2"
                            android:layout_height="match_parent"
                            android:text="@string/change"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <EditText
                        android:id="@+id/userIdNameTextEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:autofillHints="ユーザーID"
                        android:inputType="text"
                        tools:ignore="LabelFor"/>


                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_height="50dp">

                        <TextView
                            android:layout_weight="0.8"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:text="@string/user_name"
                            android:textSize="30sp"/>

                        <Button
                            android:id="@+id/userNameChangeButton"
                            android:layout_width="0dp"
                            android:layout_weight="0.2"
                            android:layout_height="match_parent"
                            android:text="@string/change"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <EditText
                        android:id="@+id/userNameTextEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:autofillHints="ニックネーム"
                        android:inputType="text"
                        tools:ignore="LabelFor" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_height="50dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="0.8"
                            android:layout_height="wrap_content"
                            android:text="@string/password"
                            android:textSize="30sp"/>

                        <Button
                            android:id="@+id/passwordChangeButton"
                            android:layout_width="0dp"
                            android:layout_weight="0.2"
                            android:layout_height="match_parent"
                            android:text="@string/change"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <EditText
                        android:id="@+id/passwordTextEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:autofillHints="パスワード"
                        android:inputType="textPassword"
                        tools:ignore="LabelFor"/>

                    <EditText
                        android:id="@+id/oneMorePasswordTextEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:autofillHints="パスワード（もう一度）"
                        android:inputType="textPassword"
                        tools:ignore="LabelFor"/>


                    <TextView
                        android:id="@+id/logoutTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/logout_guidance"
                        android:textAlignment="center"
                        android:textColor="#1097EA"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/withdrawalTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/withdrawal_guidance"
                        android:textAlignment="center"
                        android:textColor="#1097EA"
                        android:textSize="20sp"/>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</FrameLayout>