<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TalkListInTalkRoomFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        tools:ignore="UselessParent">

        <TalkListTitleView
            android:id="@+id/talkListTitleView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:background="#373737" />

        <LinearLayout
            android:id="@+id/menuContainer"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/editTextContainer"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/bodyContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/sendContainer"
                android:layout_alignParentTop="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/olderLoadButton"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/older_load"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:id="@+id/talkListContainer"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" />

                    <Button
                        android:id="@+id/newerLoadButton"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/newer_load"
                        android:textSize="20sp" />

                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:id="@+id/sendContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/contentEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:maxLines = "4"
                    android:minLines="1"
                    android:scrollbars = "vertical"
                    android:minHeight="50dp"
                    android:textSize="30sp"
                    android:inputType="textMultiLine"
                    tools:ignore="LabelFor"
                    android:autofillHints="送信したいメッセージ" />

                <Button
                    android:id="@+id/sendButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:text="@string/send"
                    android:textSize="20sp" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</FrameLayout>